[bugfix/22085] Alignment readjustments on the home page

--- a/sass/footer/vtex.store-newsletter.scss
+++ b/sass/footer/vtex.store-newsletter.scss
@@ -35,14 +35,15 @@
           height: 24px;
           background-repeat: no-repeat;
           background-size: 30px;
-          background-position: 0 -1px;
+          top: -6px;
+          position: inherit;
           background-image: url("data:image/svg+xml,%3Csvg width='22' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg stroke='%232B126B' fill='none' fill-rule='evenodd' stroke-linecap='round'%3E%3Cpath d='M1 8.17307646h16'/%3E%3Cpath stroke-linejoin='round' d='m10 15.3846149 8-7.17259295L10 .961538'/%3E%3C/g%3E%3C/svg%3E");
         }
         &:hover {
           background-color: transparent;
         }
         @include breakpoint("mobile") {
-          top: 2px;
+          top: 0;
           right: 40px;
         }
       }
