--- a/sass/home/vtex.slider-layout.scss
+++ b/sass/home/vtex.slider-layout.scss
@@ -9,7 +9,7 @@
       &--homeBottomSectionBrands,
       &--homeBottomSectionCategories {
         position: absolute;
-        top: -3rem;
+        top: -68px;
         right: 2rem;
         left: auto;
       }
@@ -21,7 +21,7 @@
       &--homeBottomSectionBrands,
       &--homeBottomSectionCategories {
         position: absolute;
-        top: -3rem;
+        top: -68px;
       }
     }
 
